<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.subwayworld</groupId>
  <artifactId>metrogen</artifactId>
  <version>4.0</version>
  <packaging>jar</packaging>

  <name>metrogen</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.db.driver>com.mysql.jdbc.Driver</maven.db.driver>
    <maven.db.url>jdbc:mysql://localhost/sww2?useServerPrepStmts=true</maven.db.url>
    <maven.db.user>sww_reader</maven.db.user>
    <maven.db.password>sww_reader</maven.db.password>
  </properties>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
    </dependency>
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>5.1.10</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>9.4.1212.jre7</version>
      <scope>runtime</scope>
    </dependency>

  </dependencies>

  <build>
  	<resources>
  	  <resource>
  	  	<directory>src/main/resources</directory>
  	  	<filtering>true</filtering>
  	  </resource>
  	</resources>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <release>8</release>
          <!-- The diamond operator requires 1.7 
          <source>1.8</source>
          <target>1.8</target> -->
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.19</version>
        <configuration>
          <skip>false</skip>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>2.6</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>org.subwayworld.metrogen.console.ConsoleParser</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>2.7</version>
      </plugin>
    </plugins>
  </build>

</project>
